--- a/src/mobile_reader/MobileSpyTest/MobileSpyTest.csproj
+++ b/src/mobile_reader/MobileSpyTest/MobileSpyTest.csproj
@@ -34,8 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="datastore">
-      <HintPath>..\..\datastore\datastore\datastore\bin\Debug\datastore.dll</HintPath>
+    <Reference Include="datastore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\datastore\datastore\bin\Debug\datastore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,6 +83,7 @@
     <Compile Include="COMlib\CTasks.cs" />
     <Compile Include="Model\Call.cs" />
     <Compile Include="Model\Contact.cs" />
+    <Compile Include="Model\Sms.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="COMlib\sourcedef.cs" />
