fix reader bugs support sms and contact on gui

--- a/src/snake/snake/App.config
+++ b/src/snake/snake/App.config
@@ -1,13 +1,14 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="mobilespyEntities" connectionString="metadata=res://*/MBSDataSource.csdl|res://*/MBSDataSource.ssdl|res://*/MBSDataSource.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;database=mobilespy;password=admin;Persist Security Info=True&quot;" providerName="System.Data.EntityClient"/>
+    <add name="mobilespyEntities" connectionString="metadata=res://*/MBSDataSourceModel.csdl|res://*/MBSDataSourceModel.ssdl|res://*/MBSDataSourceModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;database=mobilespy;password=admin;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="mobilespyEntities1" connectionString="metadata=res://*/MBSDataSource.csdl|res://*/MBSDataSource.ssdl|res://*/MBSDataSource.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;database=mobilespy;password=admin;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+</configuration>
