--- a/src/mobile_reader/MobileSpyTest/MobileSpyTest.csproj
+++ b/src/mobile_reader/MobileSpyTest/MobileSpyTest.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="COMlib">
+      <HintPath>..\..\..\..\MobTest\bin\Debug\COMlib.dll</HintPath>
+    </Reference>
     <Reference Include="datastore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\datastore\datastore\bin\Debug\datastore.dll</HintPath>
@@ -47,46 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="COMlib\CDriver.cs" />
-    <Compile Include="COMlib\CEntries.cs" />
-    <Compile Include="COMlib\CEntry.cs" />
-    <Compile Include="COMlib\CEntryItem.cs" />
-    <Compile Include="COMlib\CEvents.cs" />
-    <Compile Include="COMlib\CFile.cs" />
-    <Compile Include="COMlib\CFiles.cs" />
-    <Compile Include="COMlib\CFileSystem.cs" />
-    <Compile Include="COMlib\CFolder.cs" />
-    <Compile Include="COMlib\CFolders.cs" />
-    <Compile Include="COMlib\CItem.cs" />
-    <Compile Include="COMlib\CItemList.cs" />
-    <Compile Include="COMlib\CItemNode.cs" />
-    <Compile Include="COMlib\CKeyboard.cs" />
-    <Compile Include="COMlib\CLicense.cs" />
-    <Compile Include="COMlib\CMessage.cs" />
-    <Compile Include="COMlib\CModel.cs" />
-    <Compile Include="COMlib\CModels.cs" />
-    <Compile Include="COMlib\CNotes.cs" />
-    <Compile Include="COMlib\COrganizer.cs" />
-    <Compile Include="COMlib\COrganizerEntries.cs" />
-    <Compile Include="COMlib\COrganizerEntry.cs" />
-    <Compile Include="COMlib\CPhonebook.cs" />
-    <Compile Include="COMlib\CPhonebookEntries.cs" />
-    <Compile Include="COMlib\CPhonebookEntry.cs" />
-    <Compile Include="COMlib\CPhonebooks.cs" />
-    <Compile Include="COMlib\CPort.cs" />
-    <Compile Include="COMlib\CPorts.cs" />
-    <Compile Include="COMlib\CSms.cs" />
-    <Compile Include="COMlib\CSmsItem.cs" />
-    <Compile Include="COMlib\CSmsItems.cs" />
-    <Compile Include="COMlib\CSource.cs" />
-    <Compile Include="COMlib\CSources.cs" />
-    <Compile Include="COMlib\CTasks.cs" />
     <Compile Include="Model\Call.cs" />
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\Sms.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="COMlib\sourcedef.cs" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="MobilEditCom">
@@ -101,6 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="COMlib\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
