--- a/src/snake/snake/snake.csproj
+++ b/src/snake/snake/snake.csproj
@@ -37,14 +37,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="comlib">
-      <HintPath>..\..\comlib\comlib\bin\Debug\comlib.dll</HintPath>
+    <Reference Include="COMlib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\MobTest\COMlib.dll</HintPath>
     </Reference>
     <Reference Include="datasource, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\datastore\datasource\bin\Debug\datasource.dll</HintPath>
     </Reference>
-    <Reference Include="datastore">
+    <Reference Include="datastore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\datastore\datastore\bin\Debug\datastore.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
